--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -5,13 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Styles.Render("~/Content/jquery-ui.css")
     <link rel="stylesheet" href="~/assets/css/main.css">
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
+    <link href="~/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body class="theme-black menu_dark" style="overflow: auto;padding-top:10px">
+<body class="theme-black menu_dark">
     @RenderBody()
     <div class="overlay_menu">
         <button class="btn btn-primary btn-icon btn-icon-mini btn-round"><i class="zmdi zmdi-close"></i></button>
@@ -511,10 +509,6 @@
             </div>
         </div>
     </aside>
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/Scripts/jquery-ui.js")
-    @Scripts.Render("~/Scripts/DatePickerReady.js")
     <script src="~/assets/bundles/libscripts.bundle.js"></script>
     <script src="~/assets/bundles/vendorscripts.bundle.js"></script>
     <script src="~/assets/bundles/mainscripts.bundle.js"></script>
