--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/LineaProducto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/LineaProducto.cshtml
@@ -1,4 +1,6 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.LineaProductoDTO
+@using PagedList.Mvc;
+@using PagedList;
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
@@ -182,6 +184,14 @@
                                                         }
                                                     </tbody>
                                                 </table>
+                                            </div>
+                                        </div>
+                                        <div class="row clearfix">
+                                            <div class="col-md-6">
+                                                Pagina @(ViewBag.Lineas.PageCount < ViewBag.Lineas.PageNumber ? 0 : ViewBag.Lineas.PageNumber) de @ViewBag.Lineas.PageCount
+                                            </div>
+                                            <div class="col-md-6 text-right">
+                                                @Html.PagedListPager((IPagedList)ViewBag.Lineas, page => Url.Action("LineaProducto", new { page, @class = "btn btn-primary btn-simple" }))
                                             </div>
                                         </div>
                                     </div>
