--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
@@ -1,4 +1,6 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.ProductoDTO
+@using PagedList.Mvc;
+@using PagedList;
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
@@ -22,11 +24,16 @@
     });//document.ready
 
 </script>
+<div class="page-loader-wrapper">
+    <div class="loader">
+        <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+        <p>Espere por favor</p>
+    </div>
+</div>
 <section class="content home">
     <div class="container-fluid">
         @using (Html.BeginForm("CrearProducto", "Producto", FormMethod.Post))
-            {
-          
+        {
             @Html.HiddenFor(m => m.IdProducto)
             <div class="block-header">
                 <div class="row">
@@ -53,7 +60,14 @@
                                             <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
                                                 @foreach (var lst in ViewBag.Empresas)
                                                 {
-                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    if (lst.IdEmpresa == Model.IdEmpresa)
+                                                    {
+                                                        <option value="@lst.IdEmpresa" selected>@lst.NombreComercial</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
                                                 }
                                             </select>
                                         }
@@ -80,7 +94,14 @@
                                             <select name="IdCuentaContable" class="form-control">
                                                 @foreach (var cc in ViewBag.CuentasContables)
                                                 {
-                                                    <option value="@cc.IdCuentaContable">@cc.Descripcion</option>
+                                                    if (cc.IdCuentaContable == Model.IdCuentaContable)
+                                                    {
+                                                        <option value="@cc.IdCuentaContable" selected>@cc.Descripcion</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@cc.IdCuentaContable">@cc.Descripcion</option>
+                                                    }
                                                 }
                                             </select>
                                             @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
@@ -92,7 +113,14 @@
                                             <select name="IdCategoria" class="form-control">
                                                 @foreach (var cc in ViewBag.Categorias)
                                                 {
-                                                    <option value="@cc.IdCategoria">@cc.Nombre</option>
+                                                    if (cc.IdCategoria == Model.IdCategoria)
+                                                    {
+                                                        <option value="@cc.IdCategoria" selected>@cc.Nombre</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@cc.IdCategoria">@cc.Nombre</option>
+                                                    }
                                                 }
                                             </select>
                                             @Html.ValidationMessageFor(m => m.IdCategoria, "", new { @class = "alert-danger" })
@@ -105,7 +133,14 @@
                                         <select name="IdProductoLinea" class="form-control">
                                             @foreach (var cc in ViewBag.LineasProducto)
                                             {
-                                                <option value="@cc.IdProductoLinea">@cc.Linea</option>
+                                                if (cc.IdProductoLinea == Model.IdProductoLinea)
+                                                {
+                                                    <option value="@cc.IdProductoLinea" selected>@cc.Linea</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="@cc.IdProductoLinea">@cc.Linea</option>
+                                                }
                                             }
                                         </select>
                                         @Html.ValidationMessageFor(m => m.IdProductoLinea, "", new { @class = "alert-danger" })
@@ -115,7 +150,14 @@
                                         <select name="IdUnidadMedida" class="form-control">
                                             @foreach (var cc in ViewBag.UnidadesMedida)
                                             {
-                                                <option value="@cc.IdUnidadMedida">@cc.Acronimo</option>
+                                                if (cc.IdUnidadMedida == Model.IdUnidadMedida)
+                                                {
+                                                    <option value="@cc.IdUnidadMedida" selected>@cc.Acronimo</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="@cc.IdUnidadMedida">@cc.Acronimo</option>
+                                                }
                                             }
                                         </select>
                                         @Html.ValidationMessageFor(m => m.IdUnidadMedida, "", new { @class = "alert-danger" })
@@ -126,7 +168,14 @@
                                             <option>Seleccione unidad </option>
                                             @foreach (var cc in ViewBag.UnidadesMedida2)
                                             {
-                                                <option value="@cc.IdUnidadMedida">@cc.Acronimo</option>
+                                                if (cc.IdUnidadMedida == Model.IdUnidadMedida2)
+                                                {
+                                                    <option value="@cc.IdUnidadMedida" selected>@cc.Acronimo</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="@cc.IdUnidadMedida">@cc.Acronimo</option>
+                                                }
                                             }
                                         </select>
                                     </div>
@@ -160,30 +209,32 @@
                                             </label>
                                         </div>
                                         <div><b>Almacen</b></div>
-                                        <div class="col-md-6">
-                                            @Html.TextBoxFor(m => m.Minimos, new { @class = "form-control", @placeholder = "Minimo", type = "number", @Value = "0" })
-                                            @Html.ValidationMessageFor(m => m.Minimos, "", new { @class = "alert-danger" })
-                                        </div>
-                                        <div class="col-md-6">
-                                            @Html.TextBoxFor(m => m.Maximo, new { @class = "form-control", @placeholder = "Maximo", type = "number", @Value = "0" })
-                                            @Html.ValidationMessageFor(m => m.Maximo, "", new { @class = "alert-danger" })
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                @Html.TextBoxFor(m => m.Minimos, new { @class = "form-control", @placeholder = "Minimo", type = "number", @Value = "0" })
+                                                @Html.ValidationMessageFor(m => m.Minimos, "", new { @class = "alert-danger" })
+                                            </div>
+                                            <div class="col-md-6">
+                                                @Html.TextBoxFor(m => m.Maximo, new { @class = "form-control", @placeholder = "Maximo", type = "number", @Value = "0" })
+                                                @Html.ValidationMessageFor(m => m.Maximo, "", new { @class = "alert-danger" })
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row clearfix">
-                                    <div class="col-md-1">
+                                    <div class="col-md-12 text-right">
                                         <b>&nbsp; </b>
                                         <div class="form-group">
                                             @if (ViewBag.EsEdicion == null)
                                             {
-                                                <button btn id="BtnCrear" formaction="CrearProducto" class="btn btn-primary btn-icon btn-round">
-                                                    <i class="zmdi zmdi-plus">Agregar</i>
+                                                <button btn id="BtnCrear" formaction="CrearProducto" class="btn btn-primary btn-round">
+                                                    <i class="zmdi zmdi-plus"> Agregar</i>
                                                 </button>
                                             }
                                             else
                                             {
-                                                <button btn id="btnUpDate" formaction="EditarProducto" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
-                                                    <i class="zmdi zmdi-swap">Terminar Edicion</i>
+                                                <button btn id="btnUpDate" formaction="EditarProducto" class="btn btn-primary btn-round">
+                                                    <i class="zmdi zmdi-swap"> Terminar Edicion</i>
                                                 </button>
                                             }
                                         </div>
@@ -232,7 +283,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <input type="text" placeholder="Numero" id="txtNumeroFiltro" class="form-control" />
+                                            <input type="text" placeholder="Buscar" id="txtNumeroFiltro" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
@@ -279,12 +330,13 @@
                                                         else
                                                         {
                                                             <td>No</td>}
+
                                                         <td>
-                                                            <a href="@Url.Action("EditarProducto", "Producto", new { Id = prod.IdProducto })">
+                                                            <a href="@Url.Action("EditarProducto", "Producto" , new { Id=prod.IdProducto })">
                                                                 <i class="material-icons">edit</i>
                                                                 <span class="icon-name"></span>
                                                             </a>
-                                                            <a href="@Url.Action("EliminarProducto", "Producto", new { Id = prod.IdProducto })">
+                                                            <a href="@Url.Action("EliminarProducto", "Producto" , new { Id=prod.IdProducto })">
                                                                 <i class="material-icons">delete</i>
                                                                 <span class="icon-name"></span>
                                                             </a>
@@ -293,6 +345,14 @@
                                                 }
                                             </tbody>
                                         </table>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-md-6">
+                                        Pagina @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                        @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("Producto", new { page, @class = "btn btn-primary btn-simple" }))
                                     </div>
                                 </div>
                             </div>
