--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/UnidadMedida.cshtml
@@ -1,4 +1,6 @@
 ﻿@model MVC.Presentacion.Models.Catalogos.UnidadMedidaDTO
+@using PagedList.Mvc;
+@using PagedList;
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
@@ -182,6 +184,14 @@
                                                 }
                                             </tbody>
                                         </table>
+                                    </div>
+                                </div>
+                                <div class="row clearfix">
+                                    <div class="col-md-6">
+                                        Pagina @(ViewBag.Unidades.PageCount < ViewBag.Unidades.PageNumber ? 0 : ViewBag.Unidades.PageNumber) de @ViewBag.Unidades.PageCount
+                                    </div>
+                                    <div class="col-md-6 text-right">
+                                        @Html.PagedListPager((IPagedList)ViewBag.Unidades, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
                                     </div>
                                 </div>
                             </div>
