JSA-21/09/2018 Commite de seguridad
Avance en los catalogos faltantes para proveedores

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -497,7 +497,8 @@
                                     <li>@Html.ActionLink("Producto", "Producto", "Producto")</li>
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
                                     <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
-                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>          
+                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>         
+                                    <li>@Html.ActionLink("Proveedor", "Proveedor", "Producto")</li>          
                                     <li><br /></li>                        
                                 </ul>
                             </li>
