--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -28,8 +28,24 @@
         });
 
     });
+
+    $(document).ready(function () {
+        $("#btnGuardaEdicion").click(function () {
+
+            var form = $(this).parent("form");
+            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Usuarios", Action = "GuardaEdicionUsuario" }) %>');
+            form.attr('method', 'post');
+        });
+        $("#btnRegresarIndex").click(function () {
+
+            var form = $(this).parent("form");
+            form.attr('action', '<%= Url.RouteUrl(new { Controller = "Usuarios", Action = "Index" }) %>');
+            form.attr('method', 'post');
+        });
+
+    });
 </script>
-@using (Html.BeginForm((ViewBag.IdUser.Count == 0 || ViewBag.IdUser != null) ? "GuardarUsuario" : "GuardaEdicionUsuario", "Usuarios", FormMethod.Post))
+@using (Html.BeginForm((ViewBag.IdUser == null) ? "GuardarUsuario" : "GuardaEdicionUsuario", "Usuarios", FormMethod.Post))
 {
     <section class="content home">
         <div class="container-fluid">
@@ -45,10 +61,10 @@
                         <div class="col-sm-3">
                             <b>Gasera</b>
                             <select id="ddlEmpresas" name="IdEmpresa" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
-                                @*@foreach (var lst in ViewBag.Empresas)
+                                @foreach (var lst in ViewBag.Empresas)
                                 {
                                     <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                }*@
+                                }
                             </select>
                         </div>
 
@@ -63,57 +79,49 @@
                         </div>
                         <div class="body">
                             <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
+
+                                <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
-                                        <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <label for="txtNomC">
-                                                Nombres:*
-                                            </label>
-                                            <input type="text" name="Nombre" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre)" />
-                                            <input id="IdUsuario" type="text" name="IdUsuario" hidden="hidden" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].IdUsuario)" />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">
-                                            <label for="txtNomC">
-                                                Correo elect:*
-                                            </label>
-                                            <input type="text" name="Email1" id="txtNom" class="form-control">
-                                        </div>
+                                        Nombres:*
+                                        <input type="text" name="Nombre" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Nombre)" />
+                                        <input id="IdUsuario" type="text" name="IdUsuario" hidden="hidden" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].IdUsuario)" />
                                     </div>
                                 </div>
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="form-group">
+                                        Correo elect:*
+                                        <input type="text" name="Email1" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Email1)" id="txtNom" class="form-control">
+                                    </div>
+                                </div>
+
                             </div>
                             <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
+
+                                <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
-                                        <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <label for="txtNomC">
-                                                Apellido 1:*
-                                            </label>
-                                            <input type="text" name="Apellido1" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Apellido1)" />
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-lg-8 col-md-8 col-sm-8">
-                                            <label for="txtNomC">
-                                                Contraseña:*
-                                            </label>
-                                            <input type="password" name="Password" id="txtNom" class="form-control" />
-                                        </div>
+
+                                        Apellido 1:*
+
+                                        <input type="text" name="Apellido1" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Apellido1)" />
                                     </div>
                                 </div>
+
+                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                    <div class="form-group">
+                                        Contraseña:*
+                                        <input type="password" name="Password" id="txtNom" class="form-control" />
+                                    </div>
+                                </div>
+
                             </div>
                             <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
-                                        <div class="col-lg-4 col-md-4 col-sm-4">
-                                            <label for="txtNomC">
-                                                Apellido 2:
-                                            </label>
-                                            <input type="text" name="Apellido2" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Apellido2)" />
-                                        </div>
+                                        Apellido 2:
+                                        <input type="text" name="Apellido2" id="txtNom" class="form-control" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser[0].Apellido2)" />
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -336,7 +344,7 @@
                 <div class="row clearfix">
                     <div class="col-lg-5 col-md-5 col-sm-5">
                         <div class="form-group">
-                            <input type="submit" value="Regresar" class="btn btn-raised btn-primary float-left" formaction="Index" />
+                            <input type="submit" id="btnRegresarIndex" formaction=@Url.Action("Index") value="Regresar" class="btn btn-raised btn-primary float-left" />
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
@@ -347,7 +355,7 @@
                             }
                             else
                             {
-                                <input type="submit" value="Actualizar" formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                <input type="submit" id="btnGuardaEdicion" value="Actualizar" formmethod="post" class="btn btn-raised btn-primary float-right" />
                             }
                         </div>
                     </div>
