--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -498,7 +498,7 @@
                                     <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
                                     <li>@Html.ActionLink("Unidad de Medidad", "UnidadMedida", "Producto")</li>
                                     <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>         
-                                    <li>@Html.ActionLink("Proveedor", "Proveedor", "Producto")</li>          
+                                    <li>@Html.ActionLink("Proveedor", "Proveedores", "Producto")</li>          
                                     <li><br /></li>                        
                                 </ul>
                             </li>
