--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedores.cshtml
@@ -19,9 +19,9 @@
             $.each(s, function () {
                 $(".filterable tr:visible .indexColumn:not(:contains('"
                    + this + "'))").parent().hide();
-            });//each
-        });//key up.
-    });//document.ready
+            });
+        });
+    });
 
 </script>
 <div class="page-loader-wrapper">
@@ -68,8 +68,28 @@
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 m-b-20">
                                         <b>Empresa</b>
-                                        <asp:DropDownList ID="ddlFiltroEmpresa" CssClass="form-control z-index show-tick">
-                                        </asp:DropDownList>
+                                        @if (ViewBag.EsAdmin)
+                                        {
+                                            <select id="ddlEmpresas" class="form-control show-tick" data-live-search="true">
+                                                @foreach (var lst in ViewBag.Empresas)
+                                                {
+                                                    if (lst.IdEmpresa == Model.IdEmpresa)
+                                                    {
+                                                        <option value="@lst.IdEmpresa" selected>@lst.NombreComercial</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
+                                                }
+                                            </select>
+                                        }
+                                        else
+                                        {
+                                            <input type="text" class="form-control " disabled value="@ViewBag.Empresas" />
+                                            @Html.HiddenFor(m => m.IdEmpresa)
+                                        }
+                                        @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-lg-3 col-md-3">
                                         <div class="form-group text-center">
@@ -89,16 +109,20 @@
                                 <div class="row clearfix">
                                     <div class="col-md-3">
                                         <b>Tipo de Proveedor</b>
-                                        <select class="form-control show-tick" data-live-search="true">
-                                            <option>Proveedor</option>
-                                            <option>Acreedor</option>
+                                        <select class="form-control">
+                                            @foreach (var cc in ViewBag.TipoProveedores)
+                                            {
+                                                <option value="@cc.IdTipoProveedor">@cc.Tipo</option>
+                                            }
                                         </select>
                                     </div>
                                     <div class="col-md-3">
                                         <b>Estado</b>
-                                        <select class="form-control show-tick" data-live-search="true">
-                                            <option>Aguascalientes</option>
-                                            <option>Baja California</option>
+                                        <select class="form-control">
+                                            @foreach (var cc in ViewBag.Estados)
+                                            {
+                                                <option value="@cc.IdEstadoRep">@cc.Estado</option>
+                                            }
                                         </select>
                                     </div>
                                     <div class="col-md-3">
@@ -140,17 +164,28 @@
                                                     <td><b>Contacto</b></td>
                                                     <td><b>Telefono</b></td>
                                                     <td><b>Email</b></td>
+                                                    <td><b>Acciones</b></td>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 @foreach (var prov in ViewBag.Proveedores)
                                                 {
                                                     <tr>
-                                                        <td>prov.NombreComercial</td>
-                                                        <td>prov.Rfc</td>
-                                                        <td>prov.Persona1</td>
-                                                        <td>prov.Telefono1</td>
-                                                        <td>prov.Email1</td>
+                                                        <td>@prov.NombreComercial</td>
+                                                        <td>@prov.Rfc</td>
+                                                        <td>@prov.Persona1</td>
+                                                        <td>@prov.Telefono1</td>
+                                                        <td>@prov.Email1</td>
+                                                        <td>
+                                                            <a href="@Url.Action("EditarProveedor", "Producto" , new { Id=prov.IdProveedor })">
+                                                                <i class="material-icons">edit</i>
+                                                                <span class="icon-name"></span>
+                                                            </a>
+                                                            <a href="@Url.Action("EliminarProveedor", "Producto" , new { Id=prov.IdProveedor})">
+                                                                <i class="material-icons">delete</i>
+                                                                <span class="icon-name"></span>
+                                                            </a>
+                                                        </td>
                                                     </tr>
                                                 }
                                             </tbody>
@@ -159,10 +194,10 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="col-md-6">
-                                        Pagina @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
+                                        Pagina @(ViewBag.Proveedores.PageCount < ViewBag.Proveedores.PageNumber ? 0 : ViewBag.Proveedores.PageNumber) de @ViewBag.Proveedores.PageCount
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("Producto", new { page, @class = "btn btn-primary btn-simple" }))
+                                        @Html.PagedListPager((IPagedList)ViewBag.Proveedores, page => Url.Action("Producto", new { page, @class = "btn btn-primary btn-simple" }))
                                     </div>
                                 </div>
                             </div>
